--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 /* CSS */
 
+
+
 html {
-    padding: 0;
-    margin: 0;
+    font-family: 'Kufam', cursive;
+    background-color: #FFDFB9;
+}
+
+h1 {
+    font-size: 3.5rem;
+    color: #A4193D;
 }
 
 body {
@@ -43,10 +50,19 @@ body {
 }
 
 .grid {
-    height: 600px;
-    width: 600px;
-    display: grid;
+    height: 575px;
+    width: 575px;
+    display: inline-grid;
     grid-template-columns: repeat(16, 2fr);
     grid-template-rows: repeat(16, 2fr);
-    border: 2px solid black;
+    border: 4px solid black;
+    border-radius: 4px;
 }
+
+/* 
+display: grid;
+  max-width: 500px;
+  min-height: 500px;
+  margin: 2rem auto;
+  border: 2px solid var(--border);
+} */
